--- a/SmartOp-Angular/package.json
+++ b/SmartOp-Angular/package.json
@@ -19,8 +19,15 @@
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "@fortawesome/angular-fontawesome": "^0.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@swimlane/ngx-datatable": "^18.0.0",
+    "bootstrap": "^4.5.3",
+    "bootstrap-icons": "^1.2.1",
+    "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
+    "tailwindcss": "^2.0.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
